Add proxy